build(git): refina exclusões do diretório data
Configura exceções no .gitignore para arquivos .gitkeep, permitindo
que a estrutura de pastas vazias seja comitada no repositório.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,13 @@ $RECYCLE.BIN/
 .directory
 .Trash-*
 .nfs*
+
+# Projetos Específicos
+data/*
+!data/.gitkeep
+!data/raw/
+data/raw/*
+!data/raw/.gitkeep
+!data/vector_store/
+data/vector_store/*
+!data/vector_store/.gitkeep
