--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "loguru>=0.7.3",
     "langchain-text-splitters",
     "langchain-core",
+    "langchain-community>=0.4.1",
+    "langchain-ollama>=1.0.1",
 ]
 license = { text = "MIT" }
 classifiers = [
