chore(deps): atualiza configurações de dependências
Adiciona dependências necessárias para o funcionamento do Chainlit
e atualiza o arquivo de bloqueio de dependências.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "langchain-ollama>=1.0.1",
     "langchain-groq",
     "python-dotenv",
+    "chainlit",
 ]
 license = { text = "MIT" }
 classifiers = [
