--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,13 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages]
 find = { include = ["lastro_ai"] }
+
+[tool.isort]
+profile = "black"
+line_length = 120
+
+[tool.pylint.format]
+max-line-length = 120
+
+[tool.black]
+line-length = 120
